# bikelab-project-template

./: README.md
data/: dataset-overview.md
devices/: device-overview.md
software/: software-overview.md
software/python_package_1/: .gitignore  LICENSE  README.md  pyproject.toml
software/python_package_1/demo/config/: demoCSFxSUMO.rou.xml
software/python_package_1/src/python_package_1/: moduleB.py
software/scripts/: environment.yml  run_analysisA.py  run_analysisB.py
