[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_module_1"
description = "A description of the module"
readme = "README.md"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
	{name = "Max Mustermann", email = "m.mustermann@tudelft.nl"}
]
requires-python = ">3.11"
dependencies = [
	"numpy >= 1.25",
	"matplotlib >= 3.7",
	"scipy >= 1.10",
	"datetime",
	"sympy",
]
	
[tool.setuptools.packages.find]
where = ["src"]  
